# wildfirepy

./: .gitignore  Acknowledgement.md  CODE_OF_CONDUCT.rst  MANIFEST.in  README.md  Vision_Statement.md  acknowledgement.rst  contributors.json  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: changelog_check.yml  check_changelog.yml  greeting.yml  pythonapp.yml  pythonpackage.yml  welcome_pr.yml
changelog/: 22.trivial.rst  26.docfix.rst  38.feature.rst  43.feature.rst  45.feature.rst  47.feature.rst  51.feature.rst  52.bugfix.rst  56.docfix.rst
docs/: conf.py  index.rst  wildfirepy.coordinates.rst  wildfirepy.net.rst  wildfirepy.net.usgs.rst  wildfirepy.net.util.rst
net/modis/: modis.py
net/util/: util.py
wildfirepy/: __init__.py
wildfirepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wildfirepy/coordinates/: __init__.py  util.py
wildfirepy/net/: __init__.py
wildfirepy/net/modis/: __init__.py  downloader.py
wildfirepy/net/tests/: test_modis.py  test_usgs.py  test_viirs.py
wildfirepy/net/usgs/: __init__.py  downloader.py  modis.py  usgs_downloader.py  viirs.py
wildfirepy/net/util/: __init__.py  base.py  modis.py  usgs.py
